2010-01-17 [mones]	0.3cvs16

	* po/es.po
		Fix file encoding to match header

2010-01-16 [mones]	0.3cvs15

	* configure.ac
	* po/es.po
		Added Spanish translation

2010-01-15 [holger]	0.3cvs14

	* examples/auto/shutdown
	* examples/auto/startup
	* examples/compose/Macro
	* examples/main/Mass
	* examples/main/Print
	* examples/main/Recusively
		Add examples
	* src/composewindowtype.c
		Documentation fix

2010-01-15 [holger]	0.3cvs13

	* examples/README.examples
		Add readme file for examples section

2010-01-15 [holger]	0.3cvs12

	* examples/README.examples
		Add README to examples dir

2010-01-14 [holger]	0.3cvs11

	* ChangeLog
	* PATCHSETS
	* configure.ac
	* examples/README.examples
	* examples/auto/shutdown
	* examples/auto/startup
	* examples/compose/Macro
	* examples/main/Mass
	* examples/main/Print
	* examples/main/Recusively
		Test if commiting works now

2010-01-13 [holger]	0.3cvs10

	* examples/main/Mass mail
		Add an example

2010-01-13 [holger]	0.3cvs9

	* src/python-hooks.c
		Fix warning
	* src/nodetype.c
	* src/messageinfotype.c
	* src/foldertype.c
	* src/composewindowtype.c
	* src/clawsmailmodule.c
		Improve inline documentation

2010-01-10 [holger]	0.3cvs8

	* src/python_plugin.c
	* examples/README.examples
	* examples/auto/startup
	* examples/compose/Macro
	* examples/main/Mass
	* examples/main/Print
	* examples/main/Recusively
		Trying again

2010-01-10 [holger]	0.3cvs7

	* src/python_plugin.c
	* examples/README.examples
	* examples/auto/shutdown
	* examples/auto/startup
	* examples/compose/Macro
	* examples/main/Mass
	* examples/main/Print
	* examples/main/Recusively
		3rd try

2010-01-10 [holger]	0.3cvs6

	* examples/README.examples
	* examples/auto/shutdown
	* examples/auto/startup
	* examples/compose/Macro
	* examples/main/Mass
	* examples/main/Print
	* examples/main/Recusively
	* src/python_plugin.c
		Last commit aborted, try it again

2010-01-10 [holger]	0.3cvs5

	* README
	* examples/README.examples
	* examples/auto/shutdown