@@ -1,3 +1,10 @@
+2010-01-19 [holger]	0.3cvs17
+
+	* configure.ac
+	* src/clawsmailmodule.c
+	* src/python_plugin.c
+		Add get_folder_from_identifier function
+
 2010-01-17 [mones]	0.3cvs16
 
 	* po/es.po
